agrego animaciones en menu y productos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
     <nav>
         <ul>
-            <li><img src="images/logo.jpg" height="60px" alt="logotipo empresa leon"></li>
+            <li><img src="images/logo.jpg" alt="logotipo empresa leon"></li>
             <li><a href="index.html">Tienda</a></li>
             <li><a href="pages/collares.html">Collares</a></li>
             <li><a href="pages/aros.html">Aros</a></li>
