--- a/pages/pulseras.html
+++ b/pages/pulseras.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--link de tipografia-->
-    <link rel="stylesheet" href="../css/main.css">
+    <!-- link Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- link JavaScript Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!--link de estilos-->
+    <link rel="stylesheet" href="../css/main.css">
+    <!--link de tipografia-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&display=swap" rel="stylesheet">
@@ -15,18 +19,39 @@
 <body>
  <!-- menu navegación--> 
 <header>
-    <nav>
-        <ul>
-            <li><img src="../images/logo.jpg" height="60px" alt=""></li>
-            <li><a href="../index.html">Tienda</a></li>
-            <li><a href="../pages/collares.html">Collares</a></li>
-            <li><a href="../pages/aros.html">Aros</a></li>
-            <li><a href="../pages/anillos.html">Anillos</a></li>
-            <li><a href="../pages/pulseras.html">Pulseras</a></li>
-            <li><a href="../pages/contacto.html">Contacto</a></li>
-            <li><input type="text" placeholder="Buscar"></li>
-        </ul>
-    </nav>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            
+          <a class="navbar-brand" href="../index.html"><img src="../images/logo.jpg" alt="logotipo marca tigre dorado"></a>
+          <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item col">
+                <a class="nav-link" href="../pages/collares.html">Collares</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/aros.html">Aros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/anillos.html">Anillos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/pulseras.html">Pulseras</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+              </li>
+              
+            </ul>
+            <form class="col d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
 </header>
 <!-- cierro menu navegación -->
 
