correccion sobre links index

--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             
-                <a class="navbar-brand" href="../index.html"><img src="../images/logo.jpg" alt="logotipo marca tigre dorado"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo.jpg" alt="logotipo marca tigre dorado"></a>
                 <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link" href="../pages/collares.html">Collares</a>
+                      <a class="nav-link" href="pages/collares.html">Collares</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="../pages/aros.html">Aros</a>
+                      <a class="nav-link" href="pages/aros.html">Aros</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="../pages/anillos.html">Anillos</a>
+                      <a class="nav-link" href="pages/anillos.html">Anillos</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="../pages/pulseras.html">Pulseras</a>
+                      <a class="nav-link" href="pages/pulseras.html">Pulseras</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                      <a class="nav-link" href="pages/contacto.html">Contacto</a>
                     </li>
                     
                   </ul>
